# soroscope

./: Cargo.toml  README.md  RELEASE_NOTES_TESTNET.md  package-lock.json
.github/workflows/: ci.yml  deploy-frontend.yml
contracts/cross_chain_payload/: Cargo.toml
contracts/cross_chain_payload/src/: lib.rs  payload.rs  signatures.rs  test.rs  verification.rs
contracts/cross_chain_verifier/: Cargo.toml  README.md
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  test.rs
contracts/liquidity_pool/: Cargo.toml  README.md
core/: Cargo.toml  MERKLE_TREE_README.md
core/benches/: merkle_bench.rs
core/src/: auth.rs  benchmarks.rs  comparison.rs  errors.rs  fee_analytics.rs  fee_collector.rs  fuzz_simulation.rs  fuzz_tests.rs  gas_golfing.rs  jobs.rs  lib.rs  main.rs  merkle_tree.rs  rpc_provider.rs  simulation.rs  simulation_service.rs  wasm_branch_analysis.rs  ws.rs
docs/: IMPLEMENTATION_SUMMARY.md  MAINNET_DEPLOYMENT.md  SECURITY_AUDIT_CHECKLIST.md  WASM_ERROR_HANDLING.md  WASM_ERROR_HANDLING_COMPLETE.md  WASM_ERROR_HANDLING_TEST_GUIDE.md
scripts/: audit_multisig_thresholds.py
tests/: fix_factory.py
web/: package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
web/components/: ContractInteraction.tsx  DynamicForm.tsx  GasGolfingSuggestionsTable.tsx  GasUsageChart.tsx  NutritionLabelSkeleton.tsx  ResourceHeatmap.tsx  ResultViewerSkeleton.tsx  Resultviewer.tsx  WasmUpload.tsx  upload-zone.tsx
web/lib/: api.ts  errorHandling.ts  gasGolfingSort.d.ts  gasGolfingSort.js  gasGolfingSort.test.cjs  sorobantypes.ts  utils.ts
web/pages/: index.tsx
(+303 files in other folders)
