[package]
name = "soroban-liquidity-pool-factory-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
emergency_guard = { path = "../emergency_guard" }
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
emergency_guard = { path = "../emergency_guard" }
liquidity-pool-contract = { package = "liquidity_pool", path = "../liquidity_pool" }
token-contract = { package = "soroban-token-contract", path = "../token" }

[features]
testutils = []
